--- a/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_registration.xml
+++ b/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_registration.xml
@@ -5,15 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ECD9F6"
     tools:context=".activity.RegistrationActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:id="@+id/toolBar"
+        app:titleTextColor="@android:color/white"
+        app:layout_scrollFlags="scroll|enterAlways"/>
 
     <TextView
         android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign Up"
-        android:textColor="#0E0D0E"
+        android:textStyle="bold"
         android:textSize="40dp"
         android:gravity="center"/>
     <EditText
