--- a/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_reset_password.xml
+++ b/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_reset_password.xml
@@ -5,13 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ECD9F6"
-    android:gravity="center"
     tools:context=".activity.ResetPasswordActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:id="@+id/toolBar"
+        app:titleTextColor="@android:color/white"
+        app:layout_scrollFlags="scroll|enterAlways"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_margin="20dp"
+        android:layout_gravity="center"
         android:text="Change Password"
         android:textColor="@color/black"/>
 
