--- a/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_splash.xml
+++ b/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
     tools:context=".activity.SplashActivity">
 
     <ImageView
-        android:src="@drawable/splash"
+        android:src="@drawable/splashimg"
         android:id="@+id/imageSplash"
         android:layout_width="200dp"
         android:layout_height="200dp"/>
