--- a/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_veg_menu.xml
+++ b/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_veg_menu.xml
@@ -6,37 +6,45 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activity.VegMenuActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#D4C1F6"
-        app:title="               Carnival Restaurant"
-        android:id="@+id/toolBar"/>
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:id="@+id/toolBar"
+        app:titleTextColor="@android:color/white"
+        app:layout_scrollFlags="scroll|enterAlways"/>
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:textSize="20dp"
+        android:textStyle="bold"
         android:gravity="center"
         android:text="Veg Menu Card"/>
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content">
         <ImageView
-            android:id="@+id/imageView"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@drawable/res" />
+            android:id="@+id/imageView"
+            android:src="@drawable/res"/>
+
         <Button
-            android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="NonVegMenu"
+            android:id="@+id/btn"
             android:layout_below="@+id/imageView"
-            android:layout_marginTop="6dp"
-            android:onClick="nonVegMenu"
-            android:text="Go To Non-Veg Menu Card!" />
+            android:text="Go To Non-Veg Menu Card"/>
     </RelativeLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -46,28 +54,36 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:stretchColumns="1">
+
             <TableRow>
                 <TextView
                     android:text=""
                     android:textSize="15dp"
                     android:padding="5dp"
                     android:gravity="center"/>
+
                 <TextView
                     android:text="Name"
+                    android:textStyle="bold"
                     android:textSize="15dp"
                     android:padding="5dp"
                     android:gravity="center"/>
                 <TextView
                     android:text="Price"
+                    android:textStyle="bold"
                     android:textSize="15dp"
                     android:padding="5dp"
                     android:gravity="center"/>
+
                 <TextView
                     android:text="Quantity"
+                    android:textStyle="bold"
                     android:textSize="15dp"
                     android:padding="5dp"
                     android:gravity="center"/>
+
             </TableRow>
+
             <TableRow>
                 <ImageView
                     android:src="@drawable/idli"
@@ -131,75 +147,14 @@
                     android:layout_height="wrap_content"
                     />
             </TableRow>
-            <TableRow>
-                <ImageView
-                    android:src="@drawable/manchurian"
-                    android:layout_height="100dp"
-                    android:layout_width="100dp"
-                    android:padding="5dp"
-                    />
-                <TextView
-                    android:text="Gobi-Manchurian"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="40"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <Spinner
-                    android:id="@+id/spinner4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-            </TableRow>
-            <TableRow>
-                <ImageView
-                    android:src="@drawable/manchurian"
-                    android:layout_height="100dp"
-                    android:layout_width="100dp"
-                    android:padding="5dp"
-                    />
-                <TextView
-                    android:text="Gobi-Manchurian"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="40"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <Spinner
-                    android:id="@+id/spinner5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-            </TableRow>
-            <TableRow>
-                <ImageView
-                    android:src="@drawable/manchurian"
-                    android:layout_height="100dp"
-                    android:layout_width="100dp"
-                    android:padding="5dp"
-                    />
-                <TextView
-                    android:text="Gobi-Manchurian"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="40"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <Spinner
-                    android:id="@+id/spinner6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-            </TableRow>
         </TableLayout>
     </ScrollView>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Place Your Order"
-        android:onClick="placedOrder"/>
+        android:onClick="PlacedOrder"/>
 </LinearLayout>
+
