succesful login registration , forgot password implementation and designing

--- a/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_reset_password.xml
+++ b/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_reset_password.xml
@@ -14,15 +14,23 @@
         android:textSize="30dp"
         android:text="Change Password"
         android:textColor="@color/black"/>
-
     <EditText
         android:layout_marginTop="50dp"
+        android:padding="16dp"
+        android:id="@+id/editMobile"
+        android:inputType="phone"
+        android:hint="Enter Your registered mobile number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <EditText
+        android:layout_marginTop="10dp"
         android:padding="16dp"
         android:id="@+id/editPassword"
         android:inputType="textPassword"
         android:hint="Enter Your New Password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
     <EditText
         android:padding="16dp"
         android:id="@+id/editConfirmPassword"
