--- a/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_main.xml
+++ b/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,11 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:gravity="center"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="120dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="--PLEASE SELECT THE MENU--"
+        android:text="--Please Select Menu--"
         android:textColor="@color/black"
         android:textSize="25dp"/>
     <LinearLayout
@@ -49,14 +49,19 @@
             android:layout_height="wrap_content"
             android:text="NON-VEG MENU"
             android:onClick="nonVeg"/>
-
     </LinearLayout>
-
     <ImageView
         android:layout_weight="0.1"
         android:layout_width="390dp"
         android:layout_height="80dp"
         android:src="@drawable/main"
         android:id="@+id/imgMain"/>
+    <Button
+        android:text="Send Notification"
+        android:onClick="sendNotification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="30dp"/>
 
 </LinearLayout>
