--- a/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_veg_menu.xml
+++ b/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_veg_menu.xml
@@ -6,200 +6,65 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activity.VegMenuActivity">
+
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="#D4C1F6"
-        app:title="               Carnival Restaurant"
-        android:id="@+id/toolBar"/>
+        app:title="Carnival Restaurant" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:textSize="20dp"
         android:gravity="center"
-        android:text="Veg Menu Card"/>
+        android:text="Veg Menu Card"
+        android:textSize="20sp" />
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <!-- Assume this is your top image section -->
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_height="100dp"
             android:src="@drawable/res" />
+
         <Button
             android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageView"
             android:layout_marginTop="6dp"
-            android:onClick="nonVegMenu"
-            android:text="Go To Non-Veg Menu Card!" />
+            android:text="Go To NonVeg Menu Card!"
+            android:onClick="nonvegMenu" />
     </RelativeLayout>
-    <ScrollView
+
+    <!-- RecyclerView to display menu items -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TableLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:stretchColumns="1">
-            <TableRow>
-                <TextView
-                    android:text=""
-                    android:textSize="15dp"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="Name"
-                    android:textSize="15dp"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="Price"
-                    android:textSize="15dp"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="Quantity"
-                    android:textSize="15dp"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-            </TableRow>
-            <TableRow>
-                <ImageView
-                    android:src="@drawable/idli"
-                    android:layout_height="100dp"
-                    android:layout_width="100dp"
-                    android:padding="5dp"
-                    />
-                <TextView
-                    android:text="Idli-Samber"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="30"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <Spinner
-                    android:id="@+id/spinner1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-            </TableRow>
-            <TableRow>
-                <ImageView
-                    android:src="@drawable/manchurian"
-                    android:layout_height="100dp"
-                    android:layout_width="100dp"
-                    android:padding="5dp"
-                    />
-                <TextView
-                    android:text="Gobi-Manchurian"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="40"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <Spinner
-                    android:id="@+id/spinner2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-            </TableRow>
-            <TableRow>
-                <ImageView
-                    android:src="@drawable/meduvada"
-                    android:layout_height="100dp"
-                    android:layout_width="100dp"
-                    android:padding="5dp"
-                    />
-                <TextView
-                    android:text="Medu-Vada"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="30"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <Spinner
-                    android:id="@+id/spinner3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-            </TableRow>
-            <TableRow>
-                <ImageView
-                    android:src="@drawable/manchurian"
-                    android:layout_height="100dp"
-                    android:layout_width="100dp"
-                    android:padding="5dp"
-                    />
-                <TextView
-                    android:text="Gobi-Manchurian"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="40"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <Spinner
-                    android:id="@+id/spinner4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-            </TableRow>
-            <TableRow>
-                <ImageView
-                    android:src="@drawable/manchurian"
-                    android:layout_height="100dp"
-                    android:layout_width="100dp"
-                    android:padding="5dp"
-                    />
-                <TextView
-                    android:text="Gobi-Manchurian"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="40"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <Spinner
-                    android:id="@+id/spinner5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-            </TableRow>
-            <TableRow>
-                <ImageView
-                    android:src="@drawable/manchurian"
-                    android:layout_height="100dp"
-                    android:layout_width="100dp"
-                    android:padding="5dp"
-                    />
-                <TextView
-                    android:text="Gobi-Manchurian"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:text="40"
-                    android:padding="5dp"
-                    android:gravity="center"/>
-                <Spinner
-                    android:id="@+id/spinner6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-            </TableRow>
-        </TableLayout>
-    </ScrollView>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="8dp"
+        android:clipToPadding="false"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/list_items" />
+
+    <!-- Button for placing order -->
     <Button
+        android:id="@+id/placeOrderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Place Order"
         android:layout_gravity="center"
-        android:text="Place Your Order"
-        android:onClick="placedOrder"/>
+        android:layout_margin="16dp"
+        android:textColor="@android:color/white"
+        android:onClick="placeOrder" />
+
 </LinearLayout>
