--- a/Carnival/CarnivalRestaurant/app/src/main/res/layout/list_veg_menu.xml
+++ b/Carnival/CarnivalRestaurant/app/src/main/res/layout/list_veg_menu.xml
@@ -17,8 +17,7 @@
             android:id="@+id/textIdli"
             android:layout_marginTop="20dp"
             android:text="Idli-Samber"
-            android:textSize="20dp"
-            android:layout_width="match_parent"
+            android:textSize="20dp"            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 </LinearLayout>
