--- a/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_details.xml
+++ b/Carnival/CarnivalRestaurant/app/src/main/res/layout/activity_details.xml
@@ -9,11 +9,10 @@
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:id="@+id/toolBar"
-        app:titleTextColor="@android:color/white"
-        app:layout_scrollFlags="scroll|enterAlways"/>
+        android:layout_height="60dp"
+        android:background="#D4C1F6"
+        app:title="               Carnival Restaurant"
+        android:id="@+id/toolBar"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
