--- a/CarnivalRestaurant/app/src/main/res/layout/activity_view_cart.xml
+++ b/CarnivalRestaurant/app/src/main/res/layout/activity_view_cart.xml
@@ -35,16 +35,27 @@
         android:layout_margin="20dp"
         android:orientation="vertical"
         >
+      <LinearLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal">  <Button
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="80dp"
+          android:backgroundTint="#558B2F"
+          android:text="Total"
+          android:id="@+id/btnTotal"/>
+          <Button
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="40dp"
+              android:backgroundTint="#558B2F"
+              android:text="Proceed"
+              android:id="@+id/btnProceed"/></LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
     </LinearLayout>
-    <Button
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Place Your Order"
-        android:onClick="placeOrder"/>
+
 </LinearLayout>
