--- a/CarnivalRestaurant/app/src/main/res/layout/activity_main.xml
+++ b/CarnivalRestaurant/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
         <RadioButton
             android:layout_marginLeft="30dp"
         android:layout_width="wrap_content"
+            android:backgroundTint="#1565C0"
         android:layout_height="wrap_content"
             android:textStyle="bold"
         android:text="Table1"/>
@@ -49,12 +50,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:backgroundTint="#1565C0"
             android:layout_marginLeft="30dp"
             android:text="Table2"/>
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:backgroundTint="#1565C0"
             android:layout_marginLeft="30dp"
             android:text="Table3"/></RadioGroup>
 
@@ -69,6 +72,7 @@
             android:layout_marginLeft="120dp"
             android:id="@+id/btnMenu"
             android:layout_gravity="center"
+            android:backgroundTint="#E10A68"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="View Menu List"
